# rag-service

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  catalog-info.yaml  docker-compose.yml  docker-constraints.txt  pyproject.toml  update-systemd.sh
.github/workflows/: ci.yml  notify-pepers-integration.yml  release.yml  sandbox-validate.yml
docs/: audit-crosscheck-2026-02-24.md
scripts/: RAGANYTHING_SERVICE_README.md  __init__.py  raganything_service.py  raganything_start.sh
scripts/setup/: __init__.py  __main__.py  _config.py  _config_presets.py  _deploy.py  _libreoffice.py  _mineru.py  _ollama.py  _python.py  _runner.py  _secrets.py  _service.py  _verify.py  main.py
tests/: test_docker_artifacts.py  test_latex_macros.py  test_raganything_service_api.py  test_raganything_service_api_internal.py  test_raganything_service_components.py  test_raganything_service_security.py  test_raganything_service_tuning.py  test_raganything_service_utils.py  test_raganything_service_v2.py  test_setup_config.py  test_setup_main.py  test_setup_runner.py  test_setup_runner_v2.py  test_setup_runner_v3.py  test_setup_wizard.py
